--- a/todo-list/main.html
+++ b/todo-list/main.html
@@ -4,18 +4,41 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&family=Roboto+Mono:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
+  
+  <link rel="stylesheet" href="./main.css">
+
 </head>
 <body>
-  <div id="checkboxes">
-    <label>Today's work</label>
-    <ul style="list-style-type: none">
-      <li><input type="checkbox"> Go out for a walk</li>
-      <li><input type="checkbox"> Do the dishes</li>
-      <li><input type="checkbox"> Say Hi to Chowon</li>
-      <li><input type="checkbox"> Web-Study</li>
-    </ul>
-  </div>
-
-    <h2 id="work">Work</h2>
+    <div class="container" id="container">
+      <h3 id="title">A Very Simple To-Do List</h3>
+      <br/>
+      <div id="sub-container">
+        <ul class="list-group" id="list-group">
+          <li class="list-group-item d-flex justify-content-between align-items-center" id="list-group-item">
+          Take a shower
+            <span class="badge bg-primary rounded-pill">Delete</span>
+          </li>
+          <li class="list-group-item d-flex justify-content-between align-items-center" id="list-group-item">
+            Take a shower
+              <span class="badge bg-primary rounded-pill">Delete</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-center" id="list-group-item">
+              Take a shower
+                <span class="badge bg-primary rounded-pill">Delete</span>
+              </li>
+        </ul>
+      </div>
+      <div class="input-group mb-3" id="input-group">
+        <input type="text" class="form-control" id="input-area">
+        <button class="btn btn-outline-secondary" type="button" id="button-area">Button</button>
+      </div>
+    </div>
 </body>
 </html>
