--- a/todo-list/main.html
+++ b/todo-list/main.html
@@ -6,7 +6,6 @@
   <title>Document</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,22 +22,38 @@
         <ul class="list-group" id="list-group">
           <li class="list-group-item d-flex justify-content-between align-items-center" id="list-group-item">
           Take a shower
-            <span class="badge bg-primary rounded-pill">Delete</span>
+            <span class="badge bg-primary rounded-pill" onclick="deleteTodo()">Delete</span>
           </li>
-          <li class="list-group-item d-flex justify-content-between align-items-center" id="list-group-item">
-            Take a shower
-              <span class="badge bg-primary rounded-pill">Delete</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-center" id="list-group-item">
-              Take a shower
-                <span class="badge bg-primary rounded-pill">Delete</span>
-              </li>
         </ul>
       </div>
       <div class="input-group mb-3" id="input-group">
         <input type="text" class="form-control" id="input-area">
-        <button class="btn btn-outline-secondary" type="button" id="button-area">Button</button>
+        <button class="btn btn-outline-secondary" type="button" id="button-area" onclick="addTodo()">Add</button>
       </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
+    <script>
+      
+      function addTodo(){
+        let todo = $("#input-area").val();
+        console.log(todo);
+        let id = Math.floor(Math.random() * 100000)
+        console.log(id)
+        let list_item = `<li class="list-group-item d-flex justify-content-between    align-items-center list-${id}" id="list-group-item">
+          Take a shower
+          ${todo}
+          <span class="badge bg-primary rounded-pill" onclick="deleteTodo()">Delete</span>
+        </li>`
+
+        $("#list-group").append(list_item)
+        $("#input-area").val('')
+      }
+
+      function deleteTodo(){
+        $(".list"+id).remove()
+      }
+
+    </script>
 </body>
 </html>
