--- a/todo-list/main copy.html
+++ b/todo-list/main copy.html
@@ -18,49 +18,63 @@
     <div class="container" id="container">
       <h3 id="title" style="text-align: center;">A Very Simple To-Do List</h3>
       <br/>
+        <div id="sub-container">
+          <ul class="list-group" id="list-group">
+            <!-- 디폴트로 넣고 싶은 태그 여기에
+            <li class="list-group-item d-flex justify-content-between align-items-center" id="list-group-item">
+              Wakeup
+              <span class="badge bg-primary rounded-pill" type="button" onclick="deleteTodo()">Delete</span>
+            </li>
+            -->
 
-      <div id="sub-container">
-        <ul class="list-group" id="list-group">
-          <li class="list-group-item d-flex justify-content-between align-items-center" id="list-group-item">
-          Morning Walk for 10m
-            <span class="badge bg-primary rounded-pill" onclick="completeToDo()">Complete</span>
-          </li>
-        </ul>
-      </div>
+          </ul>
+        </div>
 
       <div class="input-group mb-3" id="input-group">
         <input type="text" class="form-control" id="input-area">
-        <button class="btn btn-outline-secondary" id="button-area" onclick="addToDo()">Add</button>
+        <button class="btn btn-outline-secondary" id="button-area" onclick="addTodo()">Add</button>
       </div>
     </div>
 
     <!--J쿼리 CDN-->
-    <script  src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     
-    <script>css("background-color", "gray");
+    <script>
 
-      function completeToDo(id){
-        $(".list-"+id).css("background-color", "gray");
+      function addTodo(){
+        let todo = $("#input-area").val();
+        let id = Math.floor(Math.random() * 100000);
+        let list_item = `<li class="list-group-item d-flex justify-content-between align-items-center list-${id}" id="list-group-item">
+          ${todo}
+          <span class="badge bg-primary rounded-pill" type="button" id=spanid onclick="deleteTodo(${id})">Delete</span>
+          </li>`;
+
+        $("#list-group").append(list_item);
+        $("#input-area").val('');
       }
 
-     function addToDo(){
-        let todo = $("#input-area").val();
+      function deleteTodo(id){
+        const element = $(".list-"+id).target;
+          if(document.querySelector('#spanid').innerHTML === 'Delete'){
+                    element.style.textDecoration = 'line-through';
+                    element.style.opacity = '0.5';
+                    document.querySelector('#spanid').innerHTML = 'renew';
 
-        let id = Math.floor(Math.random() * 1000)
+                    let partent = element.parentElement.parentElement;
+                    parent.appendChild(element.parentElement);
 
-        let list_item = `<li class="list-group-item d-flex justify-content-between align-items-center list-${id}" id="list-group-item">
-            ${todo}
-            <span class="badge bg-primary rounded-pill" onclick="deleteTodo(${id})">Delete</span>
-        </li>`
+                }else{
+                    element.style.textDecoration = 'none';
+                    element.style.opacity = '1';
+                    document.querySelector('#spanid').innerHTML = 'Complete';
 
-        $("#list-group").append(list_item)
-        $("#input-area").val("")
-     }
+                    let partent = element.parentElement.parentElement;
+                    parent.insertBefore(element.parentElement, parent.firstChild);
+                }
 
-     function deleteTodo(id){
-        $(".list-"+id).remove()
-     }
+        }
+    
 
     </script>
 </body>
